--- a/Pandas_exercises1.ipynb
+++ b/Pandas_exercises1.ipynb
@@ -6,7 +6,7 @@
       "name": "Pandas_exercises1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIgFXKUc1f/fP3ALyi3U9m",
+      "authorship_tag": "ABX9TyPmmsHIDrCoFBxQQjP9BIAB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/evelisch/project1/blob/main/Pandas_exercises1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ngJmc2U9HTO5"
+      },
+      "source": [
+        "#Here i'm answering some question regarding movies and lists"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
