--- a/Pandas_exercises1.ipynb
+++ b/Pandas_exercises1.ipynb
@@ -6,7 +6,7 @@
       "name": "Pandas_exercises1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPmmsHIDrCoFBxQQjP9BIAB",
+      "authorship_tag": "ABX9TyMDRwIzks+c7OvBjS5qwg+a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "ngJmc2U9HTO5"
       },
       "source": [
-        "#Here i'm answering some question regarding movies and lists"
+        "#Here i am answering some question regarding movies and lists"
       ],
       "execution_count": null,
       "outputs": []
