--- a/Pandas_exercises1.ipynb
+++ b/Pandas_exercises1.ipynb
@@ -6,7 +6,7 @@
       "name": "Pandas_exercises1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMDRwIzks+c7OvBjS5qwg+a",
+      "authorship_tag": "ABX9TyMpW8Ob4UOLI4HeWvLNSTWR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1658,31 +1658,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uoDEa9BGV6CC",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 181
-        },
-        "outputId": "a727a7ec-ee40-45c1-f143-2960c6f8d6b9"
+        "id": "uoDEa9BGV6CC"
       },
       "source": [
-        "#Most and Least profitable Lead Studio. (Take an average of all Profitability measures grouped by Lead studio\n",
-        "df[df('Profitability', ascending = False)].head(1) "
+        "#Most and Least profitable Lead Studio. (Take an average of all Profitability measures grouped by Lead studio"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-f31f086a6d3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Most and Least profitable Lead Studio. (Take an average of all Profitability measures grouped by Lead studio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Profitability'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
