--- a/statistics_exercise1.ipynb
+++ b/statistics_exercise1.ipynb
@@ -6,7 +6,7 @@
       "name": "statistics_exercise1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPxmpW9+o3YeKJc4P/Y7CFM",
+      "authorship_tag": "ABX9TyMMjRpKBNfN+lkdjFgbC/7Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "SvZPxIx2Ihb5"
       },
       "source": [
-        "#Here are some basic statistic exercises"
+        "#Here are some basic statistics exercises"
       ],
       "execution_count": null,
       "outputs": []
