--- a/statistics_exercise1.ipynb
+++ b/statistics_exercise1.ipynb
@@ -6,7 +6,7 @@
       "name": "statistics_exercise1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPU0wOi1pbPJMQsqG8iUBat",
+      "authorship_tag": "ABX9TyPC+rb4UOKAzwfASMMWLnGr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,8 +103,8 @@
       "source": [
         "#Which value can be the possible value for the median of the below distribution?\n",
         "\n",
-        "A) 40✅\n",
-        "B) 26\n",
+        "A) 40\n",
+        "B) 26✅\n",
         "C) 16\n",
         "D) 50"
       ],
@@ -185,10 +185,10 @@
       "source": [
         "#We have a set of positive numbers. If a single value of the set is altered what must change ? \n",
         "\n",
-        "A) Mean ✅_\n",
+        "A) Mean \n",
         "B) Median \n",
         "C) Mode \n",
-        "D) All of these"
+        "D) All of these✅"
       ],
       "execution_count": null,
       "outputs": []
